scripts/ibm_mgr_report2.txt
  File "<string>", line 13
    print(f'EmployeeID range: {d[" EmployeeID\].min()}-{d[\EmployeeID\].max()},
          ^
SyntaxError: unterminated string literal (detected at line 13)
